<resources>
    <string name="app_name">DieGo</string>

    <string name="food_name">Nama Makanan</string>
    <string name="food_detail">Detail</string>
    <string name="food_protein">Protein</string>
    <string name="food_fat">Lemak</string>
    <string name="food_karbo">Karbohidrat</string>
    <string name="food_gizi">Gizi Lain</string>
    <string name="food_bahan">Bahan</string>
    <string name="sumber_gizi">Sumber: https://nilaigizi.com/</string>
    <string name="sumber_bahan">Sumber: https://cookpad.com/</string>
    <string name="foods">Foods</string>
    <string name="about_me">About me</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bahan">Bahan:</string>
</resources>