<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/olivin">

    <RelativeLayout
        android:id="@+id/rv_food"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:background="@color/olivin">

        <ImageView
            android:id="@+id/img_food_photos"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            tools:src="@color/black"/>
        
        <TextView
            android:id="@+id/tv_makanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@+id/img_food_photos"
            android:layout_toRightOf="@+id/img_food_photos"
            tools:text="Makanan"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tv_food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_food_photos"
            android:layout_toRightOf="@+id/img_food_photos"
            android:layout_below="@id/tv_makanan"
            android:textSize="14sp"
            tools:text="@string/food_name"
            android:maxLines="2"/>

        <TextView
            android:id="@+id/tv_protein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@+id/img_food_photos"
            android:layout_toRightOf="@+id/img_food_photos"
            android:layout_below="@id/tv_food_name"
            android:text="Protein (Per 100 g)"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_food_protein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_food_photos"
            android:layout_toRightOf="@+id/img_food_photos"
            android:layout_below="@id/tv_protein"
            android:textSize="14sp"
            tools:text="@string/food_protein"/>

        <TextView
            android:id="@+id/tv_karbo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@+id/img_food_photos"
            android:layout_toRightOf="@+id/img_food_photos"
            android:layout_below="@id/tv_food_protein"
            android:text="Karbo (Per 100 g)"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_food_karbo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_food_photos"
            android:layout_toRightOf="@+id/img_food_photos"
            android:layout_below="@id/tv_karbo"
            android:textSize="14sp"
            tools:text="@string/food_karbo"/>

        <TextView
            android:id="@+id/tv_fat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@+id/img_food_photos"
            android:layout_toRightOf="@+id/img_food_photos"
            android:layout_below="@id/tv_food_karbo"
            android:text="Lemak (Per 100 g)"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_food_fat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_food_photos"
            android:layout_toRightOf="@+id/img_food_photos"
            android:layout_below="@id/tv_fat"
            android:textSize="14sp"
            tools:text="@string/food_fat"/>

        <TextView
            android:id="@+id/tv_gizi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@+id/img_food_photos"
            android:layout_toRightOf="@+id/img_food_photos"
            android:layout_below="@id/tv_food_fat"
            android:text="Gizi Lain (Per 100 g)"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_food_gizi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_food_photos"
            android:layout_toRightOf="@+id/img_food_photos"
            android:layout_below="@id/tv_gizi"
            android:textSize="14sp"
            tools:text="@string/food_gizi"
            android:maxLines="5"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/sumber_gizi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_food_photos"
            android:layout_toRightOf="@+id/img_food_photos"
            android:layout_below="@id/tv_food_gizi"
            android:textSize="10sp"
            tools:text="@string/sumber_gizi"/>

        <TextView
            android:id="@+id/tv_bumbu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@+id/sumber_gizi"
            android:textSize="16sp"
            tools:text="Bahan:"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_food_bumbu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/tv_bumbu"
            android:textSize="14sp"
            tools:text="@string/food_bahan"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_below="@id/tv_food_bumbu"
            android:textSize="10sp"
            tools:text="@string/sumber_bahan"/>
    </RelativeLayout>

</ScrollView>